#139: Fixed snackbar z-index

--- a/client/src/styles/partials/_mdc-snackbar-extended.scss
+++ b/client/src/styles/partials/_mdc-snackbar-extended.scss
@@ -1,7 +1,12 @@
+@import 'variables';
 @import '@material/snackbar/mdc-snackbar';
 
-.mdc-snackbar.mdc-snackbar__no_action .mdc-snackbar__text {
-  margin-left: auto;
-  margin-right: auto;
-  padding-right: 0;
+.mdc-snackbar {
+  z-index: map-get($z-index, exosphere);
+
+  &.mdc-snackbar__no_action .mdc-snackbar__text {
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 0;
+  }
 }
